force-app/main/default/objects/MarketingConsumptions__c/MarketingConsumptions__c.object-meta.xml
<CustomObject>
    <label>Marketing: Consumptions</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Row Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing: Consumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>