force-app/main/default/objects/MarketingConsumptions__c/fields/IsConsumption__c.field-meta.xml
<CustomField>
    <fullName>IsConsumption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Consumption</label>
    <type>Checkbox</type>
</CustomField>