force-app/main/default/objects/MarketingConsumptions__c/fields/ParentExtID__c.field-meta.xml
<CustomField>
    <fullName>ParentExtID__c</fullName>
    <label>Parent ExtID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>