force-app/main/default/objects/MarketingConsumptions__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>ProductsClassifier__c</referenceTo>
    <relationshipLabel>Marketing: Consumptions</relationshipLabel>
    <relationshipName>Marketing_Consumptions</relationshipName>
    <type>Lookup</type>
</CustomField>