force-app/main/default/objects/MarketingConsumptions__c/fields/strYEAR__c.field-meta.xml
<CustomField>
    <fullName>strYEAR__c</fullName>
    <formula>MarketingMainTable__r.strYEAR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YEAR</label>
    <type>Text</type>
</CustomField>