force-app/main/default/objects/MarketingConsumptions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MarketSegment__c</columns>
    <columns>MarketingMainTable__c</columns>
    <columns>ParentExtID__c</columns>
    <columns>Product__c</columns>
    <columns>IsConsumption__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>